--- a/#source/scss/advantages.scss
+++ b/#source/scss/advantages.scss
@@ -46,7 +46,7 @@
 		right: 0;
 		width: 73px;
 		height: 73px;
-		background: url('/img/bg/number_bg.png') 0 -20px;
+		background: url('img/bg/number_bg.png') 0 -20px;
 		p {
 			position: absolute;
 			top: 10px;
