--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -153,7 +153,7 @@ body.lock {
 		margin: 0 8px 0 0;
 		width: 13px;
 		height: 10px;
-		background: url('/img/icon/checkbox_checked.png');
+		background: url('img/icon/checkbox_checked.png');
 	}
 	label {
 		display: inline-block;
@@ -176,7 +176,7 @@ body.lock {
 		transform: translateX(-50%);
 		content: '';
 		display: block;
-		background: url('/img/icon/block.png');
+		background: url('img/icon/block.png');
 		width: 60px;
 		height: 6px;
 	}
@@ -328,7 +328,7 @@ body.lock {
 		left: 73px;
 		width: 283px;
 		height: 238px;
-		background: url('/img/bg/gift_bg.png') no-repeat;
+		background: url('img/bg/gift_bg.png') no-repeat;
 		img {
 			position: absolute;
 		}
@@ -468,7 +468,7 @@ body.lock {
 			left: auto;
 			width: 111px;
 			height: 145px;
-			background: url('/img/bg/gift_bg_small.png');
+			background: url('img/bg/gift_bg_small.png');
 			img {
 				top: 36px;
 				right: -14px;
